--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <link href="/css/lib/bootstrap.min.css" rel="stylesheet">
+    </head>
     <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="row">
+                        <p>Attributes</p>
+                    </div>
+                    <div class="row">
+                        Item 1
+                    </div>
+                    <div class="row">
+                        Item 2
+                    </div>
+                </div>
+            </div>
+        </div>
         <script src="/js/lib/jquery.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script>
