--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -2,6 +2,16 @@
 <html>
     <head>
         <link href="/css/lib/bootstrap.min.css" rel="stylesheet">
+        <style>
+            .visualization {
+                font: 10px sans-serif;
+                background-color: steelblue;
+                text-align: right;
+                padding: 3px;
+                margin: 1px;
+                color: white;
+            }
+        </style>
     </head>
     <body>
         <div class="container">
@@ -17,24 +27,15 @@
                         Item 2
                     </div>
                 </div>
+                <div class="col-xs-8">
+                    <!-- Where the visualization will go -->
+                    <div class="row visualization"></div>
+                </div>
             </div>
         </div>
         <script src="/js/lib/jquery.min.js"></script>
+        <script src="/js/lib/d3.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
-        <script>
-            function setupSocket(url) {
-                var socket = io.connect(url);
-                socket.on('news', function(data) {
-                    console.log(data);
-                    socket.emit('pokemon', {pokemon: 'bulbasaur'});
-                });
-            }
-            $(document).ready(function() {
-                $.get('/serverinfo', function(data, status, xhr) {
-                    var url = data.ip + ":" + data.port;
-                    setupSocket(url);
-                });
-            });
-        </script>
+        <script src="/js/site/setup.js"></script>
     </body>
 </html>
