Sample code to get Shruthi started

--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -37,5 +37,6 @@
         <script src="/js/lib/d3.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/site/setup.js"></script>
+        <script src="/js/site/guiSetup.js"></script>
     </body>
 </html>
