--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -2,29 +2,8 @@
 <html>
     <head>
         <link href="/css/lib/bootstrap.min.css" rel="stylesheet">
-        <style>
-            .visualization {
-                font: 10px sans-serif;
-                background-color: steelblue;
-                text-align: right;
-                padding: 3px;
-                margin: 1px;
-                color: white;
-	    }
-
-            body {
-                padding-top: 50px;
-                padding-bottom: 20px;
-            }
-
-            .list-group {
-                max-height: 500px;
-                overflow-y:scroll; 
-            }
-            .btn-group-wrap {
-                text-align: center;
-            }
-        </style>
+        <link href="/css/site/index.css" rel="stylesheet">
+        <link href="/css/site/viz.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
