Some more changes to index.html

--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -8,6 +8,9 @@
     <body>
         <div class="container">
             <div class="row">
+              <h2>Salsa</h2>
+            </div>
+            <div class="row">
                 <div class="col-md-4">
                     <ul class="list-group">
                       <a href="#" class="list-group-item">Attribute 1</a>
@@ -35,9 +38,6 @@
                                 <button type="button" class="btn btn-default">Average</button>
                             </div>
                         </div>
-                    </div>
-                    <div class="row" id="chart">
-                        Item 2
                     </div>
                 </div>
                 <div class="col-xs-8">
