--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -49,7 +49,8 @@
         <script src="/js/lib/jquery.min.js"></script>
         <script src="/js/lib/d3.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
-        <script src="/js/site/setup.js"></script>
         <script src="/js/site/guiSetup.js"></script>
+        <!-- Load this script last (and wrap everything else in a function) -->
+        <script src="/js/site/setup.js"></script>
     </body>
 </html>
