Attributes in index.html

--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -12,22 +12,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <ul class="list-group">
-                      <a href="#" class="list-group-item">Attribute 1</a>
-                      <a href="#" class="list-group-item">Attribute 2</a>
-                      <a href="#" class="list-group-item">Attribute 2</a>
-                      <a href="#" class="list-group-item">Attribute 2</a>
-                      <a href="#" class="list-group-item">Attribute 2</a>
-                      <a href="#" class="list-group-item">Attribute 1</a>
-                      <a href="#" class="list-group-item">Attribute 2</a>
-                      <a href="#" class="list-group-item">Attribute 2</a>
-                      <a href="#" class="list-group-item">Attribute 2</a>
-                      <a href="#" class="list-group-item">Attribute 2</a>
-                      <a href="#" class="list-group-item">Attribute 1</a>
-                      <a href="#" class="list-group-item">Attribute 2</a>
-                      <a href="#" class="list-group-item">Attribute 2</a>
-                      <a href="#" class="list-group-item">Attribute 2</a>
-                      <a href="#" class="list-group-item">Attribute 2</a>
+                    <ul class="list-group" id="attributes">
                     </ul>
                 </div>
                 <div class="col-md-6">
