Separate attributes and visualization divs

--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -10,22 +10,30 @@
             <div class="row">
               <h2>Salsa</h2>
             </div>
+            <!-- Aggregation Methods -->
             <div class="row">
-                <div class="col-md-4">
-                    <ul class="list-group" id="attributes">
-                    </ul>
-                </div>
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="btn-group-wrap">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-default">Sum</button>
-                                <button type="button" class="btn btn-default">Average</button>
-                            </div>
-                        </div>
+                <div class="btn-group-wrap">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default">Sum</button>
+                        <button type="button" class="btn btn-default">Average</button>
                     </div>
                 </div>
-                <div class="col-xs-8">
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="row">
+                        <h4 class="header">Attributes</h4>
+                    </div>
+                    <div class="row">
+                        <ul class="list-group" id="attributes"></ul>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class-"row">
+                        <div class="row">
+                            <h4 class="header">Visualization</h4>
+                        </div>
+                    </div>
                     <!-- Where the visualization will go -->
                     <div class="row visualization"></div>
                 </div>
