Socket handler in a new module

--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -24,7 +24,7 @@
                     <div class="row">
                         <h4 class="header">Attributes</h4>
                     </div>
-                    <div class="row">
+                    <div class="row attribute-row">
                         <ul class="list-group" id="attributes"></ul>
                     </div>
                 </div>
@@ -44,6 +44,7 @@
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/site/visualizer.js"></script>
         <script src="/js/site/guiSetup.js"></script>
+        <script src="/js/site/socketHandler.js"></script>
         <!-- Load this script last (and wrap everything else in a function) -->
         <script src="/js/site/setup.js"></script>
     </body>
