--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -43,6 +43,7 @@
         <script src="/js/lib/d3.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/site/visualizer.js"></script>
+        <script src="/js/site/uiListener.js"></script>
         <script src="/js/site/guiSetup.js"></script>
         <script src="/js/site/socketHandler.js"></script>
         <!-- Load this script last (and wrap everything else in a function) -->
