Vis should be svg

--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                     <!-- Where the visualization will go -->
-                    <div class="vis"></div>
+                    <svg class="vis"></svg>
                 </div>
             </div>
         </div>
