--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -51,6 +51,9 @@
         <script src="/js/lib/jquery.min.js"></script>
         <script src="/js/lib/d3.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/utils.js"></script>
+        <script src="/js/site/viz.js"></script>
+        <script src="/js/site/barviz.js"></script>
         <script src="/js/site/visualizer.js"></script>
         <script src="/js/site/uiListener.js"></script>
         <script src="/js/site/guiSetup.js"></script>
