--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="/css/lib/bootstrap.min.css" rel="stylesheet">
         <link href="/css/site/index.css" rel="stylesheet">
-        <link href="/css/site/viz.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
@@ -11,47 +11,67 @@
               <h2>Salsa</h2>
             </div>
             <!-- Aggregation Methods -->
+            
             <div class="row">
-                <div class="col-md-4">
-                    <div class="row">
-                        <div id="query" class="col-xs-4" >Query</div>
-                        <div id="column" class="col-xs-4" >Column</div>
-                        <div id="groupBy" class="col-xs-4" >Group By</div>
-                    </div>
-                </div>
-                <div class="col-md-8">
-                    <div class="btn-group-wrap">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default queryButton" data-type='SUM'>Sum</button>
-                            <button type="button" class="btn btn-default queryButton" data-type='AVERAGE'>Average</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="row">
+                <div class="col-md-3">
+                    <div class="row" id="header">
                         <h4 class="header">Attributes</h4>
                     </div>
                     <div class="row attribute-row">
                         <ul class="list-group" id="attributes"></ul>
                     </div>
                 </div>
-                <div class="col-md-8">
-                    <div class-"row">
+                <div class="col-md-8 vis-div">
                         <div class="row">
-                            <h4 class="header">Visualization</h4>
+                                <div class="btn-group-wrap">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-default queryButton" data-type='SUM'>Sum</button>
+                                        <button type="button" class="btn btn-default queryButton" data-type='AVERAGE'>Average</button>
+                                    </div>
+                                </div>
+                        </div>
+                        <div class="row" id="">
+                          <div class="panel-group" id="accordion">
+                          <div class="panel panel-default">
+                            <div class="panel-heading">
+                              <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                                  View Data
+                                </a>
+                              </h4>
+                            </div>
+                            <div id="collapseOne" class="panel-collapse collapse in">
+                              <div class="panel-body">
+                                <table class="table table-bordered">
+                                  
+                                </table>
+                              </div>
+                            </div>
+                          </div>  
+                        </div>
+                        </div>
+                    <!-- Where the visualization will go -->
+                    <div class="row vis-row">
+                        <ul class="nav nav-tabs">
+                          <li class="active" ><a href="#home" data-toggle="tab">ALL&nbsp<span class="glyphicon glyphicon-remove"></span></a></li>
+                        </ul>
+                        <div class="tab-content">
+                            <div class="tab-pane active" id="home">
+                                <div class="vis"></div>
+                            </div>
                         </div>
                     </div>
-                    <!-- Where the visualization will go -->
-                    <div class="vis"></div>
                 </div>
             </div>
+            <button type="button" class="btn btn-default submit">
+              Tab Test
+            </button>
         </div>
         <script src="/js/lib/jquery.min.js"></script>
         <script src="/js/lib/d3.min.js"></script>
+        <script src="/js/lib/bootstrap.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
-        <script src="/js/site/visualizer.js"></script>
+        <script src="/js/site/dummy.js"></script>
         <script src="/js/site/uiListener.js"></script>
         <script src="/js/site/guiSetup.js"></script>
         <script src="/js/site/socketHandler.js"></script>
