Re-include new classes

--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -72,6 +72,10 @@
         <script src="/js/lib/bootstrap.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/site/dummy.js"></script>
+        <script src="/js/utils.js"></script>
+        <script src="/js/site/viz.js"></script>
+        <script src="/js/site/barViz.js"></script>
+        <script src="/js/site/visualizer.js"></script>
         <script src="/js/site/uiListener.js"></script>
         <script src="/js/site/guiSetup.js"></script>
         <script src="/js/site/socketHandler.js"></script>
