Vis should be svg

--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -47,7 +47,7 @@
                                 </table>
                               </div>
                             </div>
-                          </div>  
+                          </div>
                         </div>
                         </div>
                     <!-- Where the visualization will go -->
@@ -57,7 +57,7 @@
                         </ul>
                         <div class="tab-content">
                             <div class="tab-pane active" id="home">
-                                <div class="vis"></div>
+                                <svg class="vis"></svg>
                             </div>
                         </div>
                     </div>
