--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -20,6 +20,23 @@
                     <div class="row attribute-row">
                         <ul class="list-group" id="attributes"></ul>
                     </div>
+                    <div class="row">
+                        <div class="col-md-5">
+                            <button type="button" class="btn btn-default update">
+                              Update
+                            </button>
+                        </div>
+                        <div class="col-md-5">
+                            <button type="button" class="btn btn-default cancel">
+                              Cancel
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <button type="button" class="btn btn-default submit">
+                          Tab Test
+                        </button>
+                    </div>
                 </div>
                 <div class="col-md-8 vis-div">
                         <div class="row">
@@ -59,9 +76,6 @@
                     </div>
                 </div>
             </div>
-            <button type="button" class="btn btn-default submit">
-              Tab Test
-            </button>
         </div>
         <script src="/js/lib/jquery.min.js"></script>
         <script src="/js/lib/d3.min.js"></script>
