--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <div class="row">
-              <h2>Salsa</h2>
+              <h2>Salsa - A real-time query visualizer</h2>
             </div>
             <!-- Aggregation Methods -->
             <div class="row">
@@ -23,27 +23,29 @@
                     <div class="row">
                         <h4>Attributes Selected</h4>
                     </div>
+                    <div class="selected">
                     <div class="row">
-                        <h5>Group By:
+                        <h5 style="margin-left:20px;">Group By:
                         <span class="label label-default groupBy-selected"></span></h5>
                     </div>
                     <div class="row">
-                        <h5>Column:
+                        <h5 style="margin-left:20px;">Column:
                         <span class="label label-default column-selected"></span></h5>
+                    </div>
                     </div>
                     <div class="row">
                         <h4>Operation</h4>
-                                <div class="btn-group-wrap">
+                                <div class="btn-group-wrap text-center">
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-default queryButton" data-type='SUM'>Sum</button>
                                         <button type="button" class="btn btn-default queryButton" data-type='AVERAGE'>Average</button>
                                     </div>
                                 </div>
                     </div>
-                    <div class="row start-update">
+                    <div class="row cancel-update">
                             <div class="col-md-5">
-                            <button type="button" class="btn btn-default start">
-                              Start
+                            <button type="button" class="btn btn-default cancel">
+                              Cancel
                             </button>
                             </div>
                             <div class="col-md-5">
@@ -86,13 +88,11 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-5">
-                            <!--Change this to Running Query blah blah on start or update-->
-                            <h5 class="cancel">Test</h5>
+                            <div class="progress progress-striped active" style="width:90%">
+                                <div id="myprogress" class="progress-bar" role="progressbar" aria-valuenow="40"
+                                     aria-valuemin="0" aria-valuemax="100" style="width: 5%">  
+                                </div>
                             </div>
-                            <button type="button" class="btn btn-sm cancel pull-right">
-                              Cancel
-                            </button>
                         </div>
                     </div>
                 </div>
