--- a/webserver/ui/public/test.html
+++ b/webserver/ui/public/test.html
@@ -24,8 +24,8 @@
                 <div class="col-md-8 vis-div">
                         <div class="row">
                                 <div class="btn-group-wrap">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-default queryButton" data-type='SUM'>Sum</button>
+                                    <div class="btn-group ">
+                                        <button type="button" class="btn btn-default queryButton " data-type='SUM'>Sum</button>
                                         <button type="button" class="btn btn-default queryButton" data-type='AVERAGE'>Average</button>
                                     </div>
                                 </div>
@@ -62,6 +62,11 @@
             <button type="button" class="btn btn-default submit">
               Tab Test
             </button>
+            <div class="progress progress-striped active" style="width:100px">
+                <div id="myprogress" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+                     aria-valuemin="0" aria-valuemax="100" style="width: 33.3%">  
+                </div>
+            </div>
         </div>
         <script src="/js/lib/jquery.min.js"></script>
         <script src="/js/lib/d3.min.js"></script>
@@ -75,6 +80,7 @@
         <script src="/js/site/uiListener.js"></script>
         <script src="/js/site/guiSetup.js"></script>
         <script src="/js/site/socketHandler.js"></script>
+        <script src="/js/site/progress.js"></script>
         <!-- Load this script last (and wrap everything else in a function) -->
         <script src="/js/site/setup.js"></script>
     </body>
