--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -3,6 +3,7 @@
     <head>
         <link href="/css/lib/bootstrap.min.css" rel="stylesheet">
         <link href="/css/site/index.css" rel="stylesheet">
+        <link href="/css/site/viz.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
     </head>
     <body>
@@ -11,7 +12,6 @@
               <h2>Salsa</h2>
             </div>
             <!-- Aggregation Methods -->
-            
             <div class="row">
                 <div class="col-md-3">
                     <div class="row" id="header">
