Working tabs and charts

--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -54,11 +54,6 @@
                             </button>
                             </div>
                     </div>
-                    <div class="row">
-                        <button type="button" class="btn btn-default submit">
-                          Tab Test
-                        </button>
-                    </div>
                 </div>
                 <div class="col-md-8 vis-div">
                         <div class="row">
@@ -80,17 +75,17 @@
                     <!-- Where the visualization will go -->
                     <div class="row vis-row">
                         <ul class="nav nav-tabs">
-                          <li class="active" ><a href="#home" data-toggle="tab"><button class="close closeTab" type="button" id="#homebutton" >×</button>ALL&nbsp</a></li>
+                          <!--<li class="active" ><a href="#home" data-toggle="tab"><button class="close closeTab" type="button" id="#homebutton" >×</button>ALL&nbsp</a></li>-->
                         </ul>
                         <div class="tab-content">
-                            <div class="tab-pane active" id="home">
-                                <svg class="vis"></svg>
-                            </div>
+                            <!--<div class="tab-pane active" id="home">
+                                <svg id="vis-0"></svg>
+                            </div>-->
                         </div>
                         <div class="row">
                             <div class="progress progress-striped active" style="width:90%">
                                 <div id="myprogress" class="progress-bar" role="progressbar" aria-valuenow="40"
-                                     aria-valuemin="0" aria-valuemax="100" style="width: 5%">  
+                                     aria-valuemin="0" aria-valuemax="100" style="width: 1%">  
                                 </div>
                             </div>
                         </div>
