--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -99,6 +99,7 @@
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/utils.js"></script>
         <script src="/js/site/viz.js"></script>
+        <script src="/js/site/lineViz.js"></script>
         <script src="/js/site/barViz.js"></script>
         <script src="/js/site/visualizer.js"></script>
         <script src="/js/site/uiListener.js"></script>
