Cleared update button

--- a/webserver/ui/public/index.html
+++ b/webserver/ui/public/index.html
@@ -25,12 +25,20 @@
                     </div>
                     <div class="selected">
                     <div class="row">
-                        <h5 style="margin-left:20px;">Group By:
-                        <span class="label label-default groupBy-selected"></span></h5>
+                        <div class="col-md-5">
+                            <h5 style="margin-left:20px;">Group By:</h5>
+                        </div>
+                        <div class="col-md-5">
+                            <h4><span class="label label-default groupBy-selected"></span></h4>
+                        </div>
                     </div>
                     <div class="row">
-                        <h5 style="margin-left:20px;">Column:
-                        <span class="label label-default column-selected"></span></h5>
+                        <div class="col-md-5">
+                            <h5 style="margin-left:20px;">Column:</h5>
+                        </div>
+                        <div class="col-md-5">
+                            <h4><span class="label label-default column-selected"></span></h4>
+                        </div>
                     </div>
                     </div>
                     <div class="row">
@@ -42,25 +50,18 @@
                                     </div>
                                 </div>
                     </div>
-                    <div class="row cancel-update">
-                            <div class="col-md-5">
+                    <div class="row cancel-update text-center">
                             <button type="button" class="btn btn-default cancel">
                               Cancel
                             </button>
-                            </div>
-                            <div class="col-md-5">
-                            <button type="button" class="btn btn-default update">
-                              Update
-                            </button>
-                            </div>
                     </div>
                 </div>
                 <div class="col-md-8 vis-div">
                         <div class="row">
                             <div class="panel-group">
                             <div class="panel panel-default">
-                            <button type="button" class="btn btn-group-justified" data-toggle="collapse" data-target="#collapseOne">
-                              View Data
+                            <button type="button" class="btn btn-group-justified btn-primary" data-toggle="collapse" data-target="#collapseOne">
+                              View Data&nbsp<span class="glyphicon glyphicon-chevron-down"></span>
                             </button>
                             <div id="collapseOne" class="panel-collapse collapse in">
                               <div class="panel-body">
